--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
 body{
     background-color: #d6faf0;
 }
-.mainDiv{
-    border: solid black 1px;
+/* 
+@media only screen and (max-width: 600px) {
+    div.mainDiv{
+      /* display: none; */
+      /* border: solid black 1px; */
     /* height: 1000px; */
+    /* border-radius: 5px; */
+    width: 100%;
+    }
+  }
+
+@media only screen and ((min-width: 600px)) {
+    div.mainDiv{
+      display: none; 
+      border: solid black 1px;
+     height: 1000px;
     border-radius: 5px;
-
-}
-/* td{
-    padding: 10px;
-} */
-/* .task_name{
-    width: 250px;
-} */
-
+    width: 100%;
+    }
+  } */
 .btns {
     width: 100% !important;
     height: 100% !important;
