--- a/style.css
+++ b/style.css
@@ -20,8 +20,11 @@ body{
     border-radius: 5px;
     width: 100%;
     }
-  } */
+  } 
 .btns {
     width: 100% !important;
     height: 100% !important;
+}
+#footerSample{
+        
 }
